[metadata]
name = tornado
version = 0.1.0
description = Create a populated and tagged Digital Ocean project
url = https://github.com/JoelLefkowitz/snake
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = HCL
frameworks = Terraform
status = In development
project_type = Community work
