[metadata]
name = Terraform DigitalOcean Cluster
version = 1.2.0
description = Create a populated and tagged DigitalOcean project
url = https://github.com/JoelLefkowitz/terraform-digitalocean-cluster
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = HCL
frameworks = Terraform
status = In development
project_type = Community work
