[metadata]
name = Terraform DigitalOcean Cluster
version = 1.4.5

description = Create a populated and tagged DigitalOcean project.
url = https://github.com/JoelLefkowitz/terraform-digitalocean-cluster

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    vault
    buildbot

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Community work
status = In development
homepage = https://terraform-digitalocean-cluster.readthedocs.io

languages = 
    HCL

frameworks = 
    Terraform 

paradigms = 
    Declarative programming
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
